--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ h2 {
     --bs-btn-border-color: rgb(209,81,45);
     --bs-btn-hover-color: #fff;
     --bs-btn-hover-bg: rgb(187,65,32);
-    --bs-btn-hover-border-color: rgb(187,65,32);
+    --bs-btn-hover-border-color: rgb(255, 108, 68);
     --bs-btn-focus-shadow-rgb: 225, 83, 97;
     --bs-btn-active-color: #000000;
     --bs-btn-active-bg: transparent;
@@ -87,7 +87,7 @@ h2 {
     --bs-btn-border-color: rgb(158,178,59);
     --bs-btn-hover-color: #fff;
     --bs-btn-hover-bg: rgb(138,158,35);
-    --bs-btn-hover-border-color: rgb(96, 110, 24);
+    --bs-btn-hover-border-color: rgb(200, 226, 71);
     --bs-btn-focus-shadow-rgb: 60, 153, 110;
     --bs-btn-active-color: black;
     --bs-btn-active-bg: transparent;
@@ -105,7 +105,7 @@ h2 {
     --bs-btn-border-color: rgb(235,29,54);
     --bs-btn-hover-color: #fff;
     --bs-btn-hover-bg: #bb2d3b;
-    --bs-btn-hover-border-color: #b02a37;
+    --bs-btn-hover-border-color: #ff6272;
     --bs-btn-focus-shadow-rgb: 225, 83, 97;
     --bs-btn-active-color: black;
     --bs-btn-active-bg: transparent;
@@ -114,4 +114,21 @@ h2 {
     --bs-btn-disabled-color: #fff;
     --bs-btn-disabled-bg: rgb(235,29,54);
     --bs-btn-disabled-border-color: rgb(235,29,54);
+}
+
+.btn-warning {
+    --bs-btn-color: #ffffff;
+    --bs-btn-bg: #ffc107;
+    --bs-btn-border-color: #ffc107;
+    --bs-btn-hover-color: #ffffff;
+    --bs-btn-hover-bg: #c9a128;
+    --bs-btn-hover-border-color: #ffc720;
+    --bs-btn-focus-shadow-rgb: 217, 164, 6;
+    --bs-btn-active-color: #000;
+    --bs-btn-active-bg: transparent;
+    --bs-btn-active-border-color: black;
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: #000;
+    --bs-btn-disabled-bg: #ffc107;
+    --bs-btn-disabled-border-color: #ffc107;
 }
